--- a/src/main/resources/templates/cadastroResponsavel.html
+++ b/src/main/resources/templates/cadastroResponsavel.html
@@ -64,7 +64,7 @@
         </div>
       </div>
     </div>
-    <div class="col-8 mb-3">
+    <div class="8 mb-3">
       <div class="input-group has-validation">
         <span class="input-group-text">@</span>
         <div class="form-floating">
