--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -29,7 +29,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/transferencia">Transferência</a>
                 </li>
-
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/deposito">Depósito</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/perfil">Perfil</a>
                 </li>
