--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,8 +40,13 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 text-end">
-            <button id="enviar" class="btn btn-lg btn-primary mt-3" href="/home">Logar</button>
+        <div class="row">
+            <div class="col-6 text-start">
+                <a id="cadastro" class="btn btn-lg btn-primary mt-3" href="/cadastro">Cadastrar-se</a>
+            </div>
+            <div class="col-6 text-end">
+                <button id="enviar" class="btn btn-lg btn-success mt-3" href="/home">Logar</button>
+            </div>
         </div>
     </div>
 </div>
